--- a/chatbot/assets/css/palette.css
+++ b/chatbot/assets/css/palette.css
@@ -1,1 +1,1 @@
-/* style général / variables **/ :root{ --light-color: #A8F1F7; --main-color: #10A5B2; --main-dark-color: #0C848F; --gray-color: #E4E6EB; }
+/* style général / variables **/ :root{ --light-color: #f0f2f5; --main-color: #857dff; --main-dark-color: #7B39EB; --gray-color: #E4E6EB; }
