Feat correction de fautes et ajout de documentation pour le chatbot sur la page d'accueil

--- a/chatbot/assets/css/admin.css
+++ b/chatbot/assets/css/admin.css
@@ -105,3 +105,14 @@ button {
     background-color: #d4edda;
     border-color: #c3e6cb;
 }
+
+.instruction{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.instruction-item{
+    width: 18em;
+    margin-bottom: 2em;
+}
